[package]

name = "scripts"
version = "0.0.1"
authors = ["Konstantin Stepanov <me@kstep.me>"]

[lib]
name = "script-utils"

[dependencies]
url = "*"
regex = "*"
regex_macros = "*"
rustc-serialize = "*"
cookie = "*"
openssl = "*"
hyper = "*"
encoding = "*"
toml = "*"
pb = "*"
xml-rs = "*"
time = "*"
inotify = "*"

[dependencies.xdg]
git = "https://github.com/kstep/rust-xdg.git"
