[package]

name = "scripts"
version = "0.0.1"
authors = ["Konstantin Stepanov <me@kstep.me>"]

[lib]
name = "script_utils"

[dependencies]
url = "*"
regex = "*"
regex_macros = "*"
rustc-serialize = "*"
serde = "*"
serde_json = "*"
serde_macros = "*"
cookie = "*"
openssl = "*"
hyper = "*"
encoding = "*"
toml = "*"
pb = "*"
xml-rs = "*"
time = "*"
inotify = "*"
pocket = "*"
xdg-basedir = "*"
log = "*"
