[package]
authors = ["Konstantin Stepanov <me@kstep.me>"]
name = "scripts"
version = "0.0.1"
build = "build.rs"

[build-dependencies]
serde_codegen = "0.7.2"
syntex = "0.31.0"

[dependencies]
cookie = "0.2.2"
encoding = "0.2.32"
hyper = "0.8.1"
inotify = "0.2.3"
lettre = "0.5.1"
log = "0.3.6"
openssl = "0.7.10"
pb = "0.2.0"
pocket = "0.1.3"
regex = "0.1.66"
serde = "0.7.0"
serde_json = "0.7.0"
time = "0.1.35"
url = "0.5.9"
vkrs = "0.6.2"
walkdir = "0.1.5"
xdg-basedir = "1.0.0"
xml-rs = "0.3.0"
yadns = "0.2.1"

[dependencies.toml]
default-features = false
features = ["serde"]
version = "0.1.28"

[lib]
name = "script_utils"
